--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,30 +5,6 @@
 </ion-header>
 
 <ion-content>
-  <p *ngIf="auth.loading" text-center>Loading...</p>
-  <ng-template [ngIf]="!auth.loading">
-    <!-- Not loading, not logged in: show login button -->
-    <button
-      ion-button
-      block
-      color="primary"
-      *ngIf="!auth.loggedIn"
-      (click)="auth.login()"
-    >
-      Log In
-    </button>
-    <!-- Not loading, logged in: show profile and logout button -->
-    <ng-template [ngIf]="auth.loggedIn">
-      <ion-card *ngIf="auth.user">
-        <img [src]="auth.user.picture" />
-        <ion-card-content>
-          <ion-card-title>{{ auth.user.name }}</ion-card-title>
-          <pre>{{ auth.user | json }}</pre>
-        </ion-card-content>
-      </ion-card>
-      <button ion-button block color="danger" (click)="auth.logout()">
-        Log Out
-      </button>
-    </ng-template>
-  </ng-template>
+  <ion-button *ngIf="!auth.loggedIn" (click)="auth.login()">Login</ion-button>
+  <ion-button *ngIf="auth.loggedIn" (click)="auth.logout()">Logout</ion-button>
 </ion-content>
