--- a/src/app/training/training.page.html
+++ b/src/app/training/training.page.html
@@ -5,20 +5,46 @@
 </ion-header>
 
 <ion-content>
-  <div *ngFor="let exercise of exerciseNameList; let i = index">
-    <p>{{ exercise }}</p>
-    <p *ngIf="recomendationsList.length !== 0">{{ recomendationsList[i] }}</p>
-    <ion-input
-      type="text"
-      *ngFor="let set of historyList[i]; let j = index"
-      [(ngModel)]="historyList[i][j]"
-      clearInput
-    ></ion-input>
-    <ion-button (click)="addSet(i)">Add set</ion-button>
-  </div>
-  <ion-button *ngIf="!_id" (click)="addExercise()">
-    Add exercise
-  </ion-button>
-  <ion-button (click)="finishWorkout()">Finish workout</ion-button>
-  <ion-button (click)="cancelWorkout()">Cancel workout</ion-button>
+  <ion-grid>
+    <ion-row *ngFor="let exercise of exerciseNameList; let i = index">
+      <ion-col size="6">{{ exercise }}</ion-col>
+      <ion-col *ngIf="recomendationsList.length !== 0" size="6">{{
+        recomendationsList[i]
+      }}</ion-col>
+      <ion-col *ngFor="let set of historyList[i]; let j = index" size="12">
+        <ion-item-sliding>
+          <ion-item-options>
+            <ion-item-option (click)="removeSet(i, j)" color="danger">
+              <ion-icon name="trash" size="large"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+          <ion-item lines="none">
+            <ion-input
+              type="text"
+              [(ngModel)]="historyList[i][j]"
+              clearInput
+            ></ion-input>
+          </ion-item>
+        </ion-item-sliding>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="addSet(i)"
+          ><ion-icon name="add"></ion-icon
+        ></ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button (click)="finishWorkout()">Finish workout</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button (click)="cancelWorkout()">Cancel workout</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="!_id">
+    <ion-fab-button (click)="addExercise()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
